Bug 812032 - Refactor the media reader classes to not access MediaDecoder directly; r=cpearce