content/media/omx/MediaOmxReader.cpp
@@ -12,12 +12,13 @@
 #include "MediaResource.h"
 #include "VideoUtils.h"
 #include "MediaOmxDecoder.h"
+#include "AbstractMediaDecoder.h"
 
 using namespace android;
 
 namespace mozilla {
 
-MediaOmxReader::MediaOmxReader(MediaDecoder *aDecoder) :
+MediaOmxReader::MediaOmxReader(AbstractMediaDecoder *aDecoder) :
   MediaDecoderReader(aDecoder),
   mOmxDecoder(nullptr),
   mHasVideo(false),
@@ -55,7 +56,7 @@ nsresult MediaOmxReader::ReadMetadata(nsVideoInfo* aInfo,
   mOmxDecoder->GetDuration(&durationUs);
   if (durationUs) {
     ReentrantMonitorAutoEnter mon(mDecoder->GetReentrantMonitor());
-    mDecoder->GetStateMachine()->SetDuration(durationUs);
+    mDecoder->SetMediaDuration(durationUs);
   }
 
   if (mOmxDecoder->HasVideo()) {
@@ -124,7 +125,7 @@ bool MediaOmxReader::DecodeVideoFrame(bool &aKeyframeSkip,
   // Record number of frames decoded and parsed. Automatically update the
   // stats counters using the AutoNotifyDecoded stack-based class.
   uint32_t parsed = 0, decoded = 0;
-  MediaDecoder::AutoNotifyDecoded autoNotify(mDecoder, parsed, decoded);
+  AbstractMediaDecoder::AutoNotifyDecoded autoNotify(mDecoder, parsed, decoded);
 
   // Throw away the currently buffered frame if we are seeking.
   if (mLastVideoFrame && mVideoSeekTimeUs != -1) {
